Alterado texto do botão

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:text="Button" />
+            android:text="Sortear número" />
 
         <TextView
             android:id="@+id/textView2"
